--- a/leave management/leave.css
+++ b/leave management/leave.css
@@ -24,6 +24,35 @@
     background-color: #FFFF;
 }
 
+.hamburger{
+    display: none;
+    cursor: pointer;
+    margin-bottom: 1.5rem;
+}
+
+.bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin:5px 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: red;
+}
+
+.terminate-icon{
+    display: none;
+    justify-content: flex-end;
+    margin-right: 1rem;
+    margin-top: 2rem;
+}
+
+#terminate{
+    font-size: 1rem;
+    color: red;
+    background-color: none;
+}
+
 .side-navigation .navigation-section{
     margin: 2rem 1rem;
     height: 70%;
