--- a/promotion/promotion.css
+++ b/promotion/promotion.css
@@ -1,3 +1,4 @@
+@import url('./promotion-details.css');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Poppins:wght@300;400;500;600;700;800&display=swap');
 /* Employees Css start from line 117 */
 
