--- a/main/style.css
+++ b/main/style.css
@@ -171,14 +171,14 @@ input{
     position: relative;
     text-align: center;
     margin-left: 70px;
-    top: 10px;
-    height: 21px;
+    top: 5px;
+    height: 10px;
     width: 70px;
     font-family: "Poppins";
     font-size: 10px;
     color: #990202;
     font-weight: 5px;
-    padding-top: 4px;
+    padding: 0;
     background: #FAFAFA;
     z-index: 9;
 
@@ -201,3 +201,92 @@ button{
 .alt-div{
     align-items: center;
 }
+
+
+
+/* START RESPONSIVENESS */
+@media screen and (max-width: 600px){
+    .layer{
+        height: 100vh;
+        width: 100%;
+    }
+
+    .signin-shadow{
+        width: 300px;
+        height: 400px;
+        /* height: 269px; */
+        background-color: #990202;
+    }
+
+    .sign-in{
+        position: absolute;
+        width: 300px;
+        height: 400px;
+        top: -7px;
+        z-index: 3;
+        right: 7px;
+        background-color: #FAFAFA;
+    }
+
+    .header-logo{
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
+
+    .sigin-in-form{
+        margin-top: 0;
+    }
+    
+
+
+    #header-text{
+        font-weight: bold !important;
+        font-size: 20px;
+    }
+
+    #mini-text{
+        margin-bottom: 10px !important;
+    }
+
+
+    #mini-text{
+        font-weight: bold;
+        font-size: 9px;
+        color: rgba(0, 0, 0, 0.3);
+        margin-bottom: 20px;
+    }
+
+    input{
+        width: 250px;
+        height: 45px;        
+        padding: 0 1rem;
+    }
+
+    button{        
+        width: 250px;
+        height: 45px;        
+    }
+    
+
+    
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    font-weight: bold;
+    font-size: 10px;
+    color: rgba(0, 0, 0, 0.28);
+    opacity: 1; /* Firefox */
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    font-weight: bold;
+    font-size: 10px;
+    color: rgba(0, 0, 0, 0.28);
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+    font-weight: bold;
+    font-size: 10px;
+    color: rgba(0, 0, 0, 0.28);
+  }
+}
+
+/* END RESPONSIVENESS */
